updated model not yet working